--- a/gb/21/1/4/n12666921.md
+++ b/gb/21/1/4/n12666921.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxvshi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>金言：展望2021 一瓶白酒撑起末日中国经济</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-612924442-600x400.jpg" />
 <h6>上海证交所2020年12月24日晚间突然针对贵州茅台提出监管，但没有披露具体内容。而在前一天23日，茅台集团才无偿转让4%股份给贵州国资委，市值达925亿人民币，引发市场关注。（Kevin Frayer/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年01月05日讯】回顾过去的一年，在百年不遇的<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>全球肆虐、美中经济全面对抗、香港金融中心地位不保、地方政府债务频频雷暴和外资大举撤离等等国内外一系列不利因素的巨大冲击下，中共居然一如既往、自欺欺人地自诩为“全球唯一实现经济正增长的主要经济体”；与此同时，在经历了半个世纪以来最严重的水灾、虫害横扫半个中国、至少27个省份粮食减产或绝收、以及进口粮食数量超历史的情况下，中共仍然大言不惭、自吹自擂地对外谎称“粮食生产喜获十七连丰”。</p>
-<p>大家知道，人类社会有成、住、坏、灭的发展规律，经济也有复苏、繁荣、衰退与萧条的发展周期。2020年初，笔者曾分析<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>将是“黑天鹅”满天飞，“灰犀牛”满地跑。那么，展望2021，透过虚假的数字繁荣，中国经济将正式走入一个恶性循环的大萧条时期。</p>
-<h2>一、经济全球化，外资输血让<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>“一枝独秀”</h2>
+	<p>【大纪元2021年01月05日讯】回顾过去的一年，在百年不遇的<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>全球肆虐、美中经济全面对抗、香港金融中心地位不保、地方政府债务频频雷暴和外资大举撤离等等国内外一系列不利因素的巨大冲击下，中共居然一如既往、自欺欺人地自诩为“全球唯一实现经济正增长的主要经济体”；与此同时，在经历了半个世纪以来最严重的水灾、虫害横扫半个中国、至少27个省份粮食减产或绝收、以及进口粮食数量超历史的情况下，中共仍然大言不惭、自吹自擂地对外谎称“粮食生产喜获十七连丰”。</p>
+<p>大家知道，人类社会有成、住、坏、灭的发展规律，经济也有复苏、繁荣、衰退与萧条的发展周期。2020年初，笔者曾分析<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>将是“黑天鹅”满天飞，“灰犀牛”满地跑。那么，展望2021，透过虚假的数字繁荣，中国经济将正式走入一个恶性循环的大萧条时期。</p>
+<h2>一、经济全球化，外资输血让<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>“一枝独秀”</h2>
 <p>要摸清中国经济运行的脉络，就必须事先回顾一下历史。九十年代初，随着柏林墙倒塌、苏联解体，东西方两大阵营持续了半个世纪之久冷战格局被打破，取而代之的是“全球化”。</p>
 <p>正如《魔鬼在统治着我们的世界》一书所指出：“全球化实际上就是给中共输血，让濒死的共产势力死灰复燃。共产邪灵操纵全球化的一个隐藏目的就是通过财富大挪移给中共输血，让中共在人权迫害最严重、道德最坏的时候暴富起来。全球化是挽救中共的过程、给中共政权提供合法性的过程。当中共用资本主义的营养壮大了社会主义的肌体，并且看到西方在走向衰弱之后，极大地增强了对共产极权的信心，进一步扩张了它的全球野心。”</p>
 <p>2019年9月25日，川普在联合国大会上严厉批评中共，在全球进行“掠夺式”贸易。“中国不仅拒绝其承诺的改革，还采取了一种建立在大规模贸易壁垒、钜额国家补贴、货币操纵、产品倾销、强迫性技术转让、盗窃知识产权，以及在大范围偷窃商业秘密基础之上的经济模式。”</p>
 <p>他表示，中共加入世贸组织WTO后，大量资本和技术流向中国，制造业大量流失，产业空心化，失业率攀升。仅美国就有570万制造业工人失去工作，有65,000家工厂关门。</p>
 <p>经济全球化，让中共成功度过全球金融危机，并迅速蹿升为世界第二大经济体，成为“世界工厂”，同时带动其政治和军事野心，企图在全世界输出共产模式。中共的“一带一路”在为其“世界工厂”扩大出口，向沿线国家输出过剩产能的同时，也在向周边国家输出腐败、债务、邪恶和专制，把共产主义病毒扩散至全球。最终将它们变成中共的势力范围甚至是殖民地，成为中共全球布局上的棋子。</p>
 <p>“冰冻三尺非一日之寒。”2020年美国总统大选，社会主义的势力不断高涨，党派之间的利益空前对立，并出现有史以来最大的选举舞弊乱象。很大程度上也是中共邪灵借助全球化，系统地破坏普世价值和传统文化，长期全方位向美国进行渗透和扩张的结果。</p>
-<h2>二、<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%B4%B8%E6%98%93%E6%88%98.md#1">美中贸易战</a>，川普制裁让世界“经济发动机”熄火</h2>
-<p>2016年底，商人出身的川普出乎所有人意料之外的当选美国总统。2018年<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%B4%B8%E6%98%93%E6%88%98.md#1">美中贸易战</a>开打，川普政府对中国输美商品连续加征关税，从而让正在以全球化的名义拚命扩张版图的中共遭到了迎头痛击。于是，“天选之人”川普总统，也就成为西方第一个站出来对中共“说不”的人。</p>
+<h2>二、<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%B4%B8%E6%98%93%E6%88%98.md#1">美中贸易战</a>，川普制裁让世界“经济发动机”熄火</h2>
+<p>2016年底，商人出身的川普出乎所有人意料之外的当选美国总统。2018年<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%B4%B8%E6%98%93%E6%88%98.md#1">美中贸易战</a>开打，川普政府对中国输美商品连续加征关税，从而让正在以全球化的名义拚命扩张版图的中共遭到了迎头痛击。于是，“天选之人”川普总统，也就成为西方第一个站出来对中共“说不”的人。</p>
 <p>台湾经济学家吴嘉隆曾对大纪元表示，川普早就规划好了一整套“对中政策”的大战略，设定了“六大战场”。</p>
 <p>第一个战场是美中贸易直接碰撞，中国经济成长严重受阻。贸易战交火一年多，中国经济出现了全面滑坡，并引发了积累多年的自身痼疾。</p>
 <p>第二个战场是堵住包括香港在内的外资进入中国的窗口。美国国会两院外委会都无异议通过《香港人权与民主法案》，要重新审视香港的特殊地位。一旦香港变成“死港”，中共就将亲手杀死这只曾给自己“下金蛋的鹅”。</p>
@@ -24,17 +24,17 @@
 <p>第四个是美国自身作出调整、堵住被中共盗窃技术的漏洞。美国已出台多项政策，在努力堵住被中共窃取知识产权的渠道。比如限制赴美学生、学者的签证及时间，限制中资收购美国企业等等。</p>
 <p>第五个是科技战与货币战。从华为、中兴等受制裁能看出，科技战战火丝毫不逊于贸易战，用芯片成功地卡住了中共5G的“脖子”。</p>
 <p>第六个战场是“金融战”。金融战很可能一锤决定中国经济的生死。用吴嘉隆的话说，金融战一旦开打，中共“一点胜算都没有”。只要美国宣布禁止中国银行进行美元结算，“中国经济就崩了”。</p>
-<p>尤其是中共病毒<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情传播到世界各地之后，彻底颠覆了人们对全球化的认知，让川普和世界各国真正意识到了在经济上依赖中共的恶果，更加清醒的认清了魔鬼中共的丑恶嘴脸。</p>
+<p>尤其是中共病毒<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情传播到世界各地之后，彻底颠覆了人们对全球化的认知，让川普和世界各国真正意识到了在经济上依赖中共的恶果，更加清醒的认清了魔鬼中共的丑恶嘴脸。</p>
 <p>尽管近日中国与欧盟达成“投资协定”，但纽约证交所立即宣布三大中国电信商下市。更何况一旦川普成功连任，中国经济必将遭受前所未有的灭顶之灾。</p>
 <p>大家看到，一年多来“美中经济脱钩”的结果是，中国出现了前所未有的外资撤离潮、企业倒闭潮、工人失业潮和债务违约潮。且一浪高过一浪，滚滚而来。令昔日在全球经济中独领风骚的“世界工厂”，偃旗息鼓，彻底歇菜。</p>
-<h2>三、<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E5%8F%8C%E5%BE%AA%E7%8E%AF.md#1">经济双循环</a>，中共欲用“白酒泡沫”来取代“楼市泡沫”</h2>
+<h2>三、<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E5%8F%8C%E5%BE%AA%E7%8E%AF.md#1">经济双循环</a>，中共欲用“白酒泡沫”来取代“楼市泡沫”</h2>
 <p>“美国制造”回家，“中国制造”回落。实际上，从2013年GDP增速由两位数跌落到个位数开始，主要靠出口拉动，叠加房地产狂潮的中国经济就已经走到了尽头，从过去的虚假繁荣进入全面衰退阶段，由以前的输血型经济沦为失血型经济。这样，才有党媒“别让李嘉诚跑了”的哀嚎。</p>
 <p>而从所谓“保8”到“保6”，从“保6”又到 “六保六稳”，再从所谓的数量增长型到质量增长型等种种提法，都是中共用以粉饰太平，装点门面的“遮羞布”。</p>
 <p>为了应对美中贸易战，给奄奄一息的中国经济打气输血，中共虽然不惜通过央行无锚印钞、大量放水，让以“卖地为生”的大陆经济得以多次回光返照，但始终难以扭转经济下滑的大趋势。2019年开始，只进行经济改革，不进行政治改革的“跛脚”经济，因产业空心化，缺乏技术创新，加上债台高筑，负债累累，导致实体经济全面崩溃，金融泡沫和楼市泡沫相继破灭，而2020年初突如其来的武汉肺炎（中共病毒），更是让病入膏肓的中国经济雪上加霜。</p>
 <p>从“辽宁最大国企”华晨控股到“河南能源巨头”永煤控股，再到校企清华紫光集团，2020年国企违约余额较2019年翻了三倍；从P2P清零、原油宝爆雷、银行理财产品亏空、个人信用卡违约，再到房贷断供，14亿“韭菜”几乎被中共“镰刀”统统割光。特别是每年天量的土地出让金随着天价商品房的回落，让“十个坛子九个盖”，靠“借新还旧”，玩弄“庞氏骗局”的地方财政入不敷出，捉襟见肘，甚至不得不靠贷款来发工资。因此李克强才在政府工作报告中数次号召“政府要过紧日子”，习近平也多次强调“党和政府带头过紧日子”。</p>
 <p>于是，在被川普卡住“脖子”，捏着“命门”，面临“泰山压顶”的生死存亡之际。走投无路的中共又在“十四五”规划中提出，“要加快构建以国内大循环为主体、国内国际双循环相互促进的新发展格局。”实际上是“旧瓶装新酒”，走过去“闭关锁国”，“自力更生”的计划经济老路。</p>
 <p>“钱袋子”已经被体制内蛀虫差不多掏空的中共，又不得不在近期的中央经济工作会议提出“强化反垄断和防止资本无序扩张”。这也就是靠土匪起家的中共过去“打土豪、分田地”，“公私合营”的翻版。于是，中国的“富豪榜”再次沦为“杀猪榜”，以民营经济大佬马云为代表的一批暴发户，也就理所当然的成了中共断臂求生的最佳“猎物”。正所谓“人怕出名猪怕壮。”</p>
-<p>最近，在楼市萧条，地方政府无地可卖，眼看到期的地方债又急需刚性兑付，而财政资金却空前紧张。那么，黔驴技穷的中共，一方面操控汇率，通过对人民币外升内贬的方式，稳住外资，防止资本外逃；另一方面又不得不再次开启“联合收割机”，继续吹大“股市泡沫”，好让更多的企业上市圈钱。为了帮助地方政府去杠杆，同时弥补养老金的不足，<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E8%B4%B5%E5%B7%9E%E8%8C%85%E5%8F%B0.md#1">贵州茅台</a>、衡水老白干等上市公司甚至被迫挖肉补疮，将自己的股份无偿地划转给当地的国资委，从而避免像马云一样被中共宰杀。</p>
+<p>最近，在楼市萧条，地方政府无地可卖，眼看到期的地方债又急需刚性兑付，而财政资金却空前紧张。那么，黔驴技穷的中共，一方面操控汇率，通过对人民币外升内贬的方式，稳住外资，防止资本外逃；另一方面又不得不再次开启“联合收割机”，继续吹大“股市泡沫”，好让更多的企业上市圈钱。为了帮助地方政府去杠杆，同时弥补养老金的不足，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%B4%B5%E5%B7%9E%E8%8C%85%E5%8F%B0.md#1">贵州茅台</a>、衡水老白干等上市公司甚至被迫挖肉补疮，将自己的股份无偿地划转给当地的国资委，从而避免像马云一样被中共宰杀。</p>
 <p>为了让A股再次沦为圈钱的道具，并将大陆“韭菜”所剩无几的“活命钱”赶进资本市场，中共不惜仿效历史上的“学区房”和“郁金香泡沫”，击鼓传花，将一瓶成本仅几十元的白酒恶意炒作成天价神物，并美其名曰，“酱香型科技”和“浓香型科技”。</p>
 <p>由此可见，病入膏肓的中国经济已经找不到任何出路，目前只能靠“喝酒吃药”、“醉生梦死”来维持生存和续命。但随着全球的围剿，经济的衰退，中共政权的合法性也将不复存在。</p>
 <p>大纪元首发</p>
@@ -44,35 +44,40 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/5/3/n12078978.md#1">瘟疫冲击出口 中国经济“无复苏迹象”</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/11/1/n12517225.md#1">中共为摆脱困境搞双循环 专家：漂亮口号</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/12/23/n12639981.md#1">甄东舟：盘点2020年中共的祸害和国际洋相</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/1/4/n12665664.md#1">陈思敏：中国股市新规对亿万股民意味着什么</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/5/3/n12078978.md#1">瘟疫冲击出口 中国经济“无复苏迹象”</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/11/1/n12517225.md#1">中共为摆脱困境搞双循环 专家：漂亮口号</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/12/23/n12639981.md#1">甄东舟：盘点2020年中共的祸害和国际洋相</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/1/4/n12665664.md#1">陈思敏：中国股市新规对亿万股民意味着什么</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/28/n8146809.md#1" target="_blank">陈汝莲：因祸得福 我在看守所遇到法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/4/n12666921.htm">金言：展望2021 一瓶白酒撑起末日中国经济</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/4/n12666921.htm">金言：展望2021 一瓶白酒撑起末日中国经济</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sxvshi319/djy/blob/master/gb/21/1/4/n12666921.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/1/4/n12666921.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
